--- a/src/includes/supveto/_headtext.pug
+++ b/src/includes/supveto/_headtext.pug
@@ -1,16 +1,21 @@
 //-Header Supveto Lille Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
-        mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans la Santé animale&nbsp;!
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un #[span(style="font-weight:700;color:#1a1a1a;") programme diplômant en formation initiale et en alternance], conçu pour vous offrir un enseignement théorique approfondi et une immersion professionnelle enrichissante.
-        mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Lors de cette journée, #[span(style="font-weight:700;color:#008853;") samedi 21 juin], vous pourrez #[span(style="font-weight:700;color:#008853;") de 9h30 à 13h]&nbsp;:
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] Explorer un #[span(style="font-weight:700;color:#1a1a1a;") campus moderne],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] Échanger avec des #[span(style="font-weight:700;color:#1a1a1a;") experts] et des #[span(style="font-weight:700;color:#1a1a1a;") étudiants],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos formations #[span(style="font-weight:700;color:#1a1a1a;") d'Auxiliaire spécialisé vétérinaire] (en initial) ou de  #[span(style="font-weight:700;color:#1a1a1a;") Bachelor Chargé(e) de gestion et management en structure animalière] (en apprentissage),
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] Obtenir des réponses à vos questions sur les #[span(style="font-weight:700;color:#1a1a1a;") admissions] et la #[span(style="font-weight:700;color:#1a1a1a;") vie étudiante],
-        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par le secteur de la santé animale.] 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.
+        mj-text(padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px") #[span(style="font-weight:900;") Parcoursup] ne vous a pas donné de réponse positive&nbsp;!
+        mj-text(padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px") Rassurez-vous, tout est encore possible
+        mj-text(padding="10px" mj-class="T16-400 cT0")
+        mj-text(padding="10px" padding-bottom="0" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") la santé animale]. 
+        mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Vous vous intéressez aux soins vétérinaires, au bien-être animal, à l'accompagnement des animaux ou à l'exercice d'un métier au sein d'une clinique&nbsp;? Venez découvrir nos formations
+        mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") ASV], Auxiliaire Spécialisé Vétérinaire
+        mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de Gestion et Management en Structure Animalière
+        mj-text(padding="10px" padding-top="0" mj-class="T16-400 cT0") à l'occasion de notre #[span(style="font-weight:700;color:#1a1a1a;") dernière Journée Portes Ouvertes de l'année]. 
+        mj-text(padding="5px 10px" mj-class="T16-400 cT0")
+            img(align="left" width="60px" src="" alt="")/
+            div(style="font-weight:700;padding-left:70px;color:#008853;") Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h
+            div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") #[strong Ecosup Campus] 17 rue des Ursulines - Tourcoing
+        mj-text(padding="10px" mj-class="T16-400 cT0") Chez #[span(style="font-weight:700;color:#1a1a1a;") Ecosup Campus], nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, #[span(style="font-weight:700;color:#1a1a1a;") ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir], mais un vrai dialogue, humain et bienveillant, avec chaque candidat.
+        mj-text(padding="10px" mj-class="T16-400 cT0") Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. #[span(style="font-weight:700;color:#1a1a1a;") Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine].
+        mj-text(padding="10px" mj-class="T16-700 cT1") Rejoignez-nous et donnez un vrai cap à votre avenir.
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
