--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Diététique</mj-title>
+    <mj-title>JPO du 21 juin 2025 Supveto Lille</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -16,7 +16,6 @@
     <mj-attributes>
       <mj-all font-family="Roboto, Arial, Helvetica,sans serif"/>
       <mj-class name="T36-900" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="900"/>
-      <mj-class name="T36-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="300"/>
       <mj-class name="T24-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="700"/>
       <mj-class name="T24-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="300"/>
       <mj-class name="T16-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="700"/>
@@ -25,16 +24,16 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #EC619F" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#EC619F"></mj-button>
+      <mj-button border="2px solid #008853" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#008853"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
       <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
       <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#EC619F"/>
-      <mj-class name="bg0" background-color="#EC619F"/>
-      <mj-class name="c1" color="#A83163"/>
-      <mj-class name="bg1" background-color="#A83163"/>
+      <mj-class name="c0" color="#008853"/>
+      <mj-class name="bg0" background-color="#008853"/>
+      <mj-class name="c1" color="#00390D"/>
+      <mj-class name="bg1" background-color="#00390D"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -46,7 +45,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/N1YNCcK/logo-EDietetique.png" alt="logo Ecosup Diététique"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/xKH0YmJq/logosupveto.png" alt="logo Supveto Lille"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -57,13 +56,13 @@
     <mj-section padding="0" mj-class="bg0">
       <mj-group width="100%">
         <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
+          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'Étudiants"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/jkG4P9Bh/diet2.jpg" alt="Consultation chez une diététicienne nutritionniste"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/ZzKZ0r8m/sup2.jpg" alt="Connaissance et soins des animaux compagnie"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/ynrv3RZp/jpo-Diet-Img21062025.jpg" alt="balance et aliments équilibrés pour garder la ligne"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/PZC8ZtR3/jpo-Sup-Img21062025.jpg" alt="Connaissance et soins des NAC"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -72,16 +71,17 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px"> 
       <mj-column width="88%">
-        <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900;">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;?</mj-text>
+        <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900;">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;!</mj-text>
         <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">la diététique</span>. </mj-text>
-        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez à la diététique, à l'équilibre alimentaire, à la prévention des maladies ou à l'accueil de patients&nbsp;? Venez découvrir nos formations</mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#EC619F;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Diététique et Nutrition</mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#EC619F;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de projet en Nutrition et de la prise en charge des Troubles du Comportement Alimentaire</mj-text>
-        <mj-text padding="10px" padding-top="0" mj-class="T16-400 cT0">à l'occasion de notre <span style="font-weight:700;color:#1a1a1a;">dernière Journée Portes Ouvertes de l'année</span>.</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0"></mj-text>
+        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">la santé animale</span>. </mj-text>
+        <mj-text padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0">Vous vous intéressez aux soins vétérinaires, au bien-être animal, à l'accompagnement des animaux ou à l'exercice d'un métier au sein d'une clinique&nbsp;? Venez découvrir nos formations</mj-text>
+        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">ASV</span>, Auxiliaire Spécialisé Vétérinaire</mj-text>
+        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de Gestion et Management en Structure Animalière</mj-text>
+        <mj-text padding="10px" padding-top="0" mj-class="T16-400 cT0">à l'occasion de notre <span style="font-weight:700;color:#1a1a1a;">dernière Journée Portes Ouvertes de l'année</span>. </mj-text>
         <mj-text padding="5px 10px" mj-class="T16-400 cT0"><img align="left" width="60px" src="" alt=""/>
-          <div style="font-weight:700;padding-left:70px;color:#EC619F;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
-          <div style="padding-left:70px;font-family:Robot,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
+          <div style="font-weight:700;padding-left:70px;color:#008853;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
+          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
         </mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. <span style="font-weight:700;color:#1a1a1a;">Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine</span>.</mj-text>
@@ -91,12 +91,12 @@
     <mj-section mj-class="bgW" padding="0 30px 20px 20px">
       <mj-group>
         <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Jérôme Poulain</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Julie Kokocinski</mj-text>
           <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Diététique</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Supveto Lille</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/qM5vq0xh/Jerome21062025.jpg" alt="Jérôme Poulain, responsable pédagogique diététique et nutrition"/>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/8LHVn5mv/Julie21062025.jpg" alt="Julie Kokocinski, responsable pédagogique supveto lille"/>
         </mj-column>
       </mj-group>
     </mj-section>
@@ -123,22 +123,21 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-dietetique.fr" target="_blank">www.ecosup-dietetique.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="http://supveto-lille.fr" target="_blank">www.supveto-lille.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
       </mj-column>
-      <mj-column width="80%">
+      <mj-column width="80%">   
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation initiale</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC619F;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Diététique et nutrition.</mj-text>
-        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#008853;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">ASV</span> Auxiliaire spécialisé(e) vétérinaire</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">24 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
       </mj-column>
     </mj-section>
@@ -149,17 +148,17 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation initiale</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC619F;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.</mj-text>
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#008853">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de gestion et de management en structure animalière</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
+           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
